use absolute over relative to align login UI elements to avoid negative top

--- a/index.css
+++ b/index.css
@@ -50,9 +50,7 @@ html,body{
     
 }
 #header .login .label1{
-    /* float: left; */
-    
-    position: relative;
+    position: absolute;
     top: 1px;
     left: 14px;
     width: 164px;
@@ -60,54 +58,40 @@ html,body{
     color: white;
 }
 #header .login .label2{
-    position: relative;
-    top: -19px;
+    position: absolute;
+    top: 1px;
     left: 179px;
     width: 164px;
     height: 20px;
 }
 #header .login .text1{
-    /* float: left; */
     position: absolute;
     top: 20px;
     left: 14px;
     width: 148px;
     height: 19px;
-    /* margin-top: -1px; */
     border:1px solid #1d2a5b;
-    /* padding: 0; */
     font-size: 12px;
-    /* margin-left: 14px; */
-    
 }
 #header .login .text2{
-    /* float: left; */
-    position: relative;
-    top: -20px;
+    position: absolute;
+    top: 20px;
     left: 178px;
-    
     width: 148px;
     height: 19px;
-    /* margin-top: -1px; */
     border:1px solid #1d2a5b;
-    /* padding: 0; */
     font-size: 12px;
-    /* margin-left: 14px; */
-    
 }
 #header .login .button{
     font-size: 12px;
     position: absolute;
     left: 342px;
     top: 20px;
-    /* margin-top: -1px; */
-    /* float: left; */
     width: 50px;
     height: 24px;
     background-color:#4267b2;
     border: 1px solid #29487d;
     color: white;
-    /* margin-left:14px; */
     font-weight: bold;
     border-radius: 1px;
 }
@@ -121,8 +105,6 @@ html,body{
 #container{
     height: 569px;
     background: linear-gradient(white, #D3D8E8);
-
-    
 }
 #container .box1 {
     width: 50%;
